[dependencies]
pyo3 = {version = "0.27.1", features = ["extension-module"]}
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"

[lib]
crate-type = ["cdylib"]
name = "unicode_segmentation_rs"

[package]
edition = "2021"
name = "unicode-segmentation-rs"
version = "0.1.0"

# [build-dependencies]
# pyo3-build-config = "0.20"
